Apache Tez Change Log
=====================

Release 0.8.4: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-3202. Reduce the memory need for jobs with high number of segments

Release 0.8.3: 2016-04-14 

INCOMPATIBLE CHANGES
  TEZ-3180. Update master docs to declare hadoop-2.6.x as a minimum requirement.
  TEZ-3029. Add an onError method to service plugin contexts.
  TEZ-3120. Remove TaskCommContext.getCurrentDagName, Identifier.
  TEZ-3183. Change the taskFailed method on plugin contexts to specify the type of failure.
  TEZ-3199. Rename getCredentials in TaskCommunicatorContext to be less confusing.

ALL CHANGES:
  TEZ-3188. Move tez.submit.hosts out of TezConfiguration to TezConfigurationConstants.
  TEZ-3194. Tez UI: Swimlane improve in-progress experience.
  TEZ-3196. java.lang.InternalError from decompression codec is fatal to a task during shuffle
  TEZ-3161. Allow task to report different kinds of errors - fatal / kill.
  TEZ-3177. Non-DAG events should use the session domain or no domain if the data does not need protection.
  TEZ-3192. IFile#checkState creating unnecessary objects though auto-boxing
  TEZ-3173. Update Tez AM REST APIs for more information for each vertex.
  TEZ-3108. Add support for external services to local mode.
  TEZ-3189. Pre-warm dags should not be counted in submitted dags count by DAGAppMaster.
  TEZ-2967. Vertex start time should be that of first task start time in UI
  TEZ-3175. Add tez client submit host
  TEZ-3166. Fix a few cases where counters aren't fully updated and sent for failed tasks.
  TEZ-2958. Recovered TA, whose commit cannot be recovered, should move to killed state
  TEZ-2936. Create ATS implementation that enables support for YARN-4265 (ATS v1.5)
  TEZ-3148. Invalid event TA_TEZ_EVENT_UPDATE on TaskAttempt.
  TEZ-3105. TezMxBeanResourceCalculator does not work on IBM JDK 7 or 8 causing Tez failures.
  TEZ-3155. Support a way to submit DAGs to a session where the DAG plan exceeds hadoop ipc limits.